--- a/stylesurveyform.css
+++ b/stylesurveyform.css
@@ -5,7 +5,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url(./leaf.jpg);
+    background-image: url(./about-us-plain.jpg);
     width: 100%;
     height: auto;
     background-size: conver;
@@ -96,3 +96,6 @@ input[type=submit]{
         font-size: 15px;
     }
 }
+
+
+
